--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/company_instructors_tracking
+spring.datasource.name=company_instructors_tracking
+spring.datasource.username=postgres
+spring.datasource.password=postgres1
